<resources>
    <string name="app_name">app2009</string>
    <string name="text_name">Имя:</string>
    <string name="text_age">Возраст:</string>
    <string name="text_spec">Специализация:</string>
    <string name="text_photo">Фото:</string>
    <string name="text_projects">Проекты:</string>
    <string name="text_achiev">Достижения:</string>
    <string name="text_about">О себе:</string>
    <string name="name">Виолетта</string>
    <string name="age">22</string>
    <string name="spec">Человек</string>
    <string name="self">Пум-пум-пум</string>
</resources>